SERVER-77503 $percentile should accept variables and expressions for "p" arg